# dev-infra

./: BUILD.bazel  README.md  WORKSPACE  angular-dev-infra-private-14.0.0-next.0.tgz  package.json
bazel/api-golden/: index.bzl
bazel/api-golden/test/: BUILD.bazel
bazel/api-golden/test/transitive_target/: BUILD.bazel
bazel/benchmark/app_bundling/: index.bzl
bazel/benchmark/app_bundling/test/: BUILD.bazel
bazel/benchmark/component_benchmark/: component_benchmark.bzl
bazel/benchmark/driver-utilities/: BUILD.bazel
bazel/browsers/chromium/: BUILD.bazel
bazel/browsers/firefox/: BUILD.bazel
bazel/esbuild/: index.bzl
bazel/integration/tests/angular-cli/: BUILD.bazel
bazel/integration/tests/custom_env_variables/: BUILD.bazel
bazel/integration/tests/external_command_script/: BUILD.bazel
bazel/integration/tests/nested_bazel_workspaces/: BUILD.bazel
bazel/integration/tests/package_mappings/: BUILD.bazel
bazel/integration/tests/package_mappings/fake_pkg_srcs/: BUILD.bazel
bazel/integration/tests/playwright_chromium/: .yarnrc.yml  BUILD.bazel
bazel/protos/: BUILD.bazel
bazel/spec-bundling/: index.bzl
bazel/spec-bundling/test/: BUILD.bazel
github-actions/: BUILD.bazel
github-actions/commit-message-based-labels/: BUILD.bazel
github-actions/commit-message-based-labels/lib/: BUILD.bazel
github-actions/feature-request/: BUILD.bazel
github-actions/lock-closed/: BUILD.bazel
github-actions/lock-closed/lib/: BUILD.bazel
github-actions/slash-commands/: BUILD.bazel
github-actions/slash-commands/lib/: BUILD.bazel
ng-dev/: BUILD.bazel
ng-dev/caretaker/: BUILD.bazel
ng-dev/ci/: BUILD.bazel
ng-dev/ci/gather-test-results/: BUILD.bazel
ng-dev/commit-message/: BUILD.bazel
ng-dev/format/: BUILD.bazel
ng-dev/misc/: BUILD.bazel
ng-dev/ngbot/: BUILD.bazel
ng-dev/pr/: BUILD.bazel
ng-dev/pr/check-target-branches/: BUILD.bazel
ng-dev/pr/checkout/: BUILD.bazel
ng-dev/pr/common/: BUILD.bazel
ng-dev/pr/config/: BUILD.bazel
ng-dev/pr/discover-new-conflicts/: BUILD.bazel
ng-dev/pr/merge/: BUILD.bazel
ng-dev/pr/rebase/: BUILD.bazel
ng-dev/pullapprove/: BUILD.bazel
ng-dev/release/: BUILD.bazel
ng-dev/release/config/: BUILD.bazel
ng-dev/release/info/: BUILD.bazel
ng-dev/release/notes/: BUILD.bazel
ng-dev/release/publish/: BUILD.bazel
ng-dev/release/publish/test/: BUILD.bazel
ng-dev/release/set-dist-tag/: BUILD.bazel
ng-dev/release/stamping/: BUILD.bazel
ng-dev/release/versioning/: BUILD.bazel
ng-dev/release/versioning/test/: BUILD.bazel
ng-dev/ts-circular-dependencies/: BUILD.bazel
ng-dev/utils/: BUILD.bazel
ng-dev/utils/test/: BUILD.bazel
ng-dev/utils/testing/: BUILD.bazel
patches/: @angular+bazel+13.1.1.patch
tools/: defaults.bzl  generate_ts_proto_module.bzl  toolchain_info.bzl
tools/jasmine/: BUILD.bazel
tools/local-actions/changelog/: BUILD.bazel
tools/local-actions/changelog/lib/: BUILD.bazel
tslint-rules/: BUILD.bazel
