load("//tools:defaults.bzl", "esbuild_checked_in", "jasmine_node_test", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

package(default_visibility = ["//github-actions/feature-request:__subpackages__"])

ts_library(
    name = "feature-request",
    srcs = glob(
        ["src/*.ts"],
        exclude = ["src/*.spec.ts"],
    ),
    deps = [
        "//github-actions:utils",
        "@npm//@actions/core",
        "@npm//@actions/github",
        "@npm//@octokit/request-error",
        "@npm//@octokit/rest",
        "@npm//@types/node",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(["src/*.spec.ts"]),
    deps = [
        ":feature-request",
        "@npm//jasmine",
    ],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [
            ":test_lib",
        ],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]

esbuild_checked_in(
    name = "main",
    entry_point = ":src/main.ts",
    deps = [
        ":feature-request",
    ],
)

esbuild_checked_in(
    name = "post",
    entry_point = ":src/post.ts",
    deps = [
        ":feature-request",
    ],
)
