load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

ts_library(
    name = "caretaker",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    visibility = ["//ng-dev:__subpackages__"],
    deps = [
        "//ng-dev/release/versioning",
        "//ng-dev/utils",
        "@npm//@types/inquirer",
        "@npm//@types/node",
        "@npm//@types/node-fetch",
        "@npm//@types/yargs",
        "@npm//inquirer",
        "@npm//multimatch",
        "@npm//node-fetch",
        "@npm//typed-graphqlify",
        "@npm//yaml",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":caretaker",
        "//ng-dev/release/versioning",
        "//ng-dev/utils",
        "//ng-dev/utils/testing",
        "@npm//@types/semver",
        "@npm//semver",
    ],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [
            ":test_lib",
        ],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
