load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

ts_library(
    name = "commit-message",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    visibility = [
        "//github-actions/commit-message-based-labels:__subpackages__",
        "//ng-dev:__subpackages__",
    ],
    deps = [
        "//ng-dev/utils",
        "@npm//@types/conventional-commits-parser",
        "@npm//@types/git-raw-commits",
        "@npm//@types/inquirer",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//conventional-commits-parser",
        "@npm//git-raw-commits",
        "@npm//inquirer",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":commit-message",
        "//ng-dev/utils",
        "@npm//@types/events",
        "@npm//inquirer",
    ],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [
            ":test_lib",
        ],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
