load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

ts_library(
    name = "pullapprove",
    srcs = [
        "cli.ts",
        "condition_evaluator.ts",
        "group.ts",
        "logging.ts",
        "parse-yaml.ts",
        "pullapprove_arrays.ts",
        "utils.ts",
        "verify.ts",
    ],
    visibility = ["//ng-dev:__subpackages__"],
    deps = [
        "//ng-dev/utils",
        "@npm//@types/minimatch",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//minimatch",
        "@npm//yaml",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(
        ["*.spec.ts"],
    ),
    deps = [
        ":pullapprove",
    ],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [":test_lib"],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
