load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools:defaults.bzl", "jasmine_node_test")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

ts_library(
    name = "bootstrap",
    testonly = True,
    srcs = [
        "bootstrap.ts",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//ng-dev/utils/testing:bazel-env",
        "@npm//@bazel/jasmine",
        "@npm//@types/jasmine",
    ],
)

filegroup(
    name = "bootstrap_init",
    testonly = True,
    srcs = [":bootstrap"],
    output_group = "es5_sources",
    visibility = ["//visibility:public"],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = [
        "bootstrap.spec.ts",
    ],
    deps = [
        ":bootstrap",
        "//ng-dev/utils/testing:bazel-env",
        "@npm//@types/node",
    ],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [
            ":test_lib",
        ],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
