load("//bazel/spec-bundling:index.bzl", "spec_bundle")
load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        "@npm//@angular/core",
    ],
)

spec_bundle(
    name = "test_bundle",
    platform = "node",
    run_angular_linker = True,
    deps = [":test_lib"],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [
            ":test_bundle",
        ],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
