load("//tools:defaults.bzl", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES")

LIST = []

[
    LIST.append("//bazel/protos:test_status_" + toolchain_name)
    for toolchain_name in TOOLCHAINS_NAMES
]

print(LIST)

ts_library(
    name = "gather-test-results",
    srcs = [
        "cli.ts",
        "index.ts",
    ],
    visibility = ["//ng-dev:__subpackages__"],
    deps = [
        "//ng-dev/utils",
        "@npm//@types/node",
        "@npm//@types/yargs",
    ] + LIST,
)
