load("//bazel/integration:index.bzl", "integration_test")

integration_test(
    name = "test",
    srcs = [
        "test.js",
    ],
    commands = [
        "node ./test.js",
    ],
    data = [
        "//:.yarn/releases/yarn-3.1.1.cjs",
        "@npm//:node_modules/semver/package.json",
    ],
    environment = {
        "CUSTOM_VAR": "yes!",
        "RESOLVED_BIN": "$(rootpath @npm//:node_modules/semver/package.json)",
        "MANUAL_ROOT_PATH": "../npm/node_modules/semver/package.json",
        "BAZELISK_HOME": "<TMP>",
        "BAZELISK_HOME_2": "<TMP>",
    },
    # tool_mappings = {
    #     "@nodejs//:node_bin": "node",
    # },
    tool_mappings = select({
        "@bazel_tools//src/conditions:linux_x86_64": {
            "//:.yarn/releases/yarn-3.1.1.cjs": "yarn",
            "@node16_linux_amd64//:node_bin": "node",
        },
    }),
)
