load("//bazel/integration:index.bzl", "integration_test")

integration_test(
    name = "test",
    srcs = [
        ".yarnrc.yml",
        "package.json",
        "test.mjs",
    ],
    commands = [
        # Note: We use a cache folder within the integration test as otherwise
        # the NPM package mapped archive would be cached in the system.
        # See: https://github.com/yarnpkg/yarn/issues/2165.
        "yarn install",
        "node ./test.mjs",
    ],
    data = [
        # The Yarn files also need to be part of the integration test as runfiles
        # because the `yarn_bin` target is not a self-contained standalone binary.
        # "//:.yarn/releases/yarn-3.1.1.cjs",
        ".yarnrc.yml",
    ],
    npm_packages = {
        "//bazel/integration/tests/package_mappings/fake_pkg_srcs:archive": "fake_pkg",
    },
    # tool_mappings = {
    #     "@nodejs//:yarn_bin": "yarn",
    #     "@nodejs//:node_bin": "node",
    # },
    tool_mappings = select({
        "@bazel_tools//src/conditions:linux_x86_64": {
            "//:.yarn/releases/yarn-3.1.1.cjs": "yarn",
            "@node16_linux_amd64//:node_bin": "node",
        },
    }),
)
