load("//bazel/integration:index.bzl", "integration_test")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

[
    integration_test(
        name = "test_" + toolchain_name,
        srcs = glob(["**/*"]),
        commands = [
            "yarn",
            "yarn test",
        ],
        data = [
            # The Yarn files also need to be part of the integration test as runfiles
            # because the `yarn_bin` target is not a self-contained standalone binary.
            "@nodejs//:yarn_files",
            # Makes the chromium binaries available for the `ng test` command.
            "//bazel/browsers/chromium",
        ],
        environment = {
            "CHROME_BIN": "$(CHROMIUM)",
        },
        tags = [
            # This test relies on `yarn` so there needs to be internet access.
            "requires-network",
        ],
        tool_mappings = {
            "@nodejs//:yarn_bin": "yarn",
            "@nodejs//:node_bin": "node",
        },
        toolchain = toolchain,
        toolchains = ["//bazel/browsers/chromium:toolchain_alias"],
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
