load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")
load("//tools:toolchain_info.bzl", "TOOLCHAINS_NAMES", "TOOLCHAINS_VERSIONS")

ts_library(
    name = "test_lib",
    srcs = glob([
        "**/*.ts",
    ]),
    deps = [
        "//ng-dev/release/versioning",
        "//ng-dev/utils",
        "//ng-dev/utils/testing",
        "@npm//@types/jasmine",
        "@npm//nock",
    ],
)

[
    jasmine_node_test(
        name = "test_" + toolchain_name,
        specs = [":test_lib"],
        toolchain = toolchain,
    )
    for toolchain_name, toolchain in zip(
        TOOLCHAINS_NAMES,
        TOOLCHAINS_VERSIONS,
    )
]
